--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kludgine = {path = "../../kludgine/kludgine"}
+kludgine = {git = "https://github.com/khonsulabs/kludgine.git"}
