--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "shared"
 version = "0.1.0"
 authors = ["Jonathan Johnson <jon@nilobject.com>"]
 edition = "2018"
@@ -7,9 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-warp = "0.2"
-tokio = {version = "0.2", features=["macros"]}
-shared = {path = "../shared"}
-futures = "0.3"
-bincode = "1.2"
 serde = "1"
+serde_derive = "1"
