--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,3 +13,7 @@ shared = {path = "../shared"}
 futures = "0.3"
 bincode = "1.2"
 serde = "1"
+url = "2.1"
+dotenv="0.15"
+tera="1.2"
+lazy_static="1.4"
