--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 kludgine = {git = "https://github.com/khonsulabs/kludgine.git"}
 yarws = "0.3"
-tokio = {version = "0.2", features=["macros"]}
+tokio = {version = "0.2", features=["full"]}
 shared = {path = "../shared"}
 futures = "0.3"
 bincode = "1.2"
