--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2018"
 
 [dependencies]
 warp = "0.2"
-tokio = {version = "0.2", features=["macros"]}
+tokio = {version = "0.2", features=["full"]}
 shared = {path = "../shared"}
 futures = "0.3"
 bincode = "1.2"
 serde = "1"
+serde_json="1"
+serde_derive="1"
 url = "2.1"
 dotenv="0.15"
 tera="1.2"
@@ -21,3 +23,5 @@ crossbeam="0.7"
 uuid={version = "*", features=["v4"]}
 migrations = {path = "../migrations"}
 anyhow="1"
+async-std="1"
+reqwest = {version = "0.10", features=["json"]}
