Attempting to get CI working with database checks.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,6 +6,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    # Service containers to run with `runner-job`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+
     steps:
       - uses: actions/checkout@v1
       - name: Install Dependencies
@@ -30,7 +49,10 @@ jobs:
       - name: Build
         # sass sass/index.scss public/stylesheet.css
         run: |
+          echo 'DATABASE_URL="postgres://postgres:postgres@localhost/postgres"' >> .env
+          cargo run --package migrations --release
           cargo build --package server --release --verbose
+          cargo test --release
       - name: Run tests
         run: cargo test --release --verbose
       - name: Configure production
