Adding initial assets, hooking up network status to render.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,69 +5,16 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "lldb",
+      "name": "(Windows) Launch",
+      "type": "cppvsdbg",
       "request": "launch",
-      "name": "Debug executable 'client'",
-      "cargo": {
-        "args": ["build", "--bin=client", "--package=client"],
-        "filter": {
-          "name": "client",
-          "kind": "bin"
-        }
-      },
+      "program": "${workspaceFolder}/target/debug/client.exe",
       "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug unit tests in executable 'client'",
-      "cargo": {
-        "args": ["test", "--no-run", "--bin=client", "--package=client"],
-        "filter": {
-          "name": "client",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug executable 'server'",
-      "cargo": {
-        "args": ["build", "--bin=server", "--package=server"],
-        "filter": {
-          "name": "server",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug unit tests in executable 'server'",
-      "cargo": {
-        "args": ["test", "--no-run", "--bin=server", "--package=server"],
-        "filter": {
-          "name": "server",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    }
-  ],
-  "compounds": [
-    {
-      "name": "Server/Client",
-      "configurations": [
-        "Debug executable 'server'",
-        "Debug executable 'client'"
-      ]
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "preLaunchTask": "rust: cargo build client"
     }
   ]
 }
