--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kludgine = {git = "https://github.com/khonsulabs/kludgine.git"}
+kludgine = {git = "https://github.com/khonsulabs/kludgine.git", branch = "gui"}
 yarws = "0.3"
 tokio = {version = "0.2", features=["full"]}
 shared = {path = "../shared"}
