--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,7 +14,11 @@ shared = {path = "../shared"}
 futures = "0.3"
 bincode = "1.2"
 serde = "1"
+serde_derive="1"
 webbrowser = "0.5"
 uuid = "0.8"
 crossbeam = "0.7"
 dotenv = "0.15"
+dirs="2"
+toml="0.5"
+atomicwrites = "0.2"
