--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -10,3 +10,9 @@ edition = "2018"
 serde = "1"
 serde_derive = "1"
 uuid={version = "*", features=["v4", "serde"]}
+
+chrono = "0.4"
+[dependencies.sqlx]
+version = "0.3"
+default-features = false
+features = [ "runtime-tokio", "macros" , "postgres", "uuid", "chrono",  "tls" ]
